--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 ---
-layout: default-small
+layout: default
 ---
-<div class="name-tag waves-effect waves-dark">
-  <a class="page-link" href="/about/">
-    <div class="greeting-section">
-      <h1 class="greeting">Hello</h1>
-      <p class="my-name-is">my name is</p>
-    </div>
-    <div class="name-section">
-      <p class="name">Liz</p>
-    </div>
-  </a>
-</div>
+{% include work.html %}
+{% include code.html %}
+{% include about.html %}
+{% include thoughts.html %}
